--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <main>
             <h1>Basky Keefe | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Basky Keefe" width="200">
-            <p>My name is Basky, and I'm from New Zealand</p>
+            <p>My name is Basky, and I'm from New Zealand. I'm studying the BYU software course and I really love it. I have tried in the past to learn programming but found it quite difficult to understand where and how to start. I'm enjoying the course and find it very interesting how these tecnologies that we use so often work in the background. One interesting thing is that I've found programming quite easy to comprehend. And this is only due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
         </main>
         <footer>
-            <p>©️ 2025 | Basky Keefe | New Zealand</p>
+            <p>&copy;2025 | Basky Keefe | New Zealand</p>
         </footer>
     </body>
 </html>
