--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Basky Keefe | WDD 130</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Basky Keefe | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Basky Keefe" width="200">
-            <p>My name is Basky, and I'm from New Zealand. I'm studying the BYU software course and I really love it. I have tried in the past to learn programming but found it quite difficult to understand where and how to start. I'm enjoying the course and find it very interesting how these tecnologies that we use so often work in the background. One interesting thing is that I've found programming quite easy to comprehend. And this is only due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
-        </main>
-        <footer>
-            <p>&copy;2025 | Basky Keefe | New Zealand</p>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Basky Keefe | WDD 130</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Basky Keefe | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Basky Keefe" width="200">
+        <p>My name is Basky, and I'm from New Zealand. I'm studying the BYU software course and I really love it. I have
+            tried in the past to learn programming but found it quite difficult to understand where and how to start.
+            I'm enjoying the course and find it very interesting how these tecnologies that we use so often work in the
+            background. One interesting thing is that I've found programming quite easy to comprehend. And this is only
+            due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have
+            very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
+    </main>
+    <footer>
+        <p>&copy;2025 | Basky Keefe | New Zealand</p>
+    </footer>
+</body>
+
 </html>
