--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -15,11 +15,10 @@
     </header>
     <nav>
         <ul>
-            <li><a
-                    href="https://www.musictheoryacademy.com/understanding-music/harmony/augmented-6th-chords/"></a>Augmented
-                6th Chords</li>
-            <li><a href="https://www.musictheoryacademy.com/understanding-music/harmony/neapolitan-6th/"></a>Neapolitan
-                6th Chord</li>
+            <li><a href="https://www.musictheoryacademy.com/understanding-music/harmony/augmented-6th-chords/">Augmented
+                    6th Chords</a></li>
+            <li><a href="https://www.musictheoryacademy.com/understanding-music/harmony/neapolitan-6th/">Neapolitan
+                    6th Chord</a></li>
         </ul>
     </nav>
     <main>
