correct everything again.

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -32,7 +32,8 @@
         </section>
     </main>
     <aside>
-        <img src="images\hamilton_new_zealand_temple_lds.jpg" alt="Hamilton Temple" width="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/hamilton-new-zealand/800x500/hamilton_new_zealand_temple_lds.jpg"
+            alt="Hamilton Temple" width="200">
     </aside>
     <footer>Basky Keefe</footer>
 
