--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basky Keefe | Holy Grail Layout Example</title>
     <meta name="description" content="A common layout example on the web called the 'holy grail' layout.">
-    <meta name="authour" content="Basky Keefe">
+    <meta name="author" content="Basky Keefe">
 </head>
 
 <body>
