--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box-Model</title>
+    <title>box-model</title>
     <link rel="stylesheet" href="styles/box-model.css">
 </head>
 <body>
