--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Basky Keefe | WDD 130</title>
-    <link rel="stylesheet" href="styles/styless.css">
+    <meta name="description" content="BYU Student studying Software Development degree 2025 ">
+    <meta name="author" content="Basky Keefe">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -25,6 +27,11 @@
             due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have
             very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
     </main>
+    <aside>
+        <h2>New Zealand</h2>
+        <img src="images/Jonah-Lomu-la-disparition-d-une-legende-du-rugby.webp" alt="jonah lomu">
+        <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful lakes, rivers, beaches, mountains dot the country; a very picturesque place.</p>
+    </aside>
     <footer>
         <p>&copy;2025 | Basky Keefe | New Zealand</p>
     </footer>
