--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <aside>
         <h2>New Zealand</h2>
         <img src="images/Jonah-Lomu-la-disparition-d-une-legende-du-rugby.webp" alt="jonah lomu">
-        <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful lakes, rivers, beaches, mountains dot the country; a very picturesque place.</p>
+        <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful
+            lakes, rivers, beaches, mountains dot the country; a very picturesque place.</p>
     </aside>
     <footer>
         <p>&copy;2025 | Basky Keefe | New Zealand</p>
