--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/basky-keefe-1447a4103/">Linken Page</a>
+            <a href="https://www.facebook.com/basky.keefe">Facebook Page</a>
         </nav>
     </header>
     <main>
@@ -26,8 +28,18 @@
             background. One interesting thing is that I've found programming quite easy to comprehend. And this is only
             due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have
             very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
+
+        <ul class="box indent">
+            <li><a href="https://churchofjesuschristtemples.org/auckland-new-zealand-temple/">New Zealand, Auckland
+                    Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/hamilton-new-zealand-temple/">New Zealand, Hamilton
+                    Temple</a></li>
+            <li><a href="https://churchofjesuschristtemples.org/wellington-new-zealand-temple/">New Zealand, Wellington
+                    Temple</a></li>
+        </ul>
     </main>
-    <aside>
+
+    <aside class="box">
         <h2>New Zealand</h2>
         <img src="images/Jonah-Lomu-la-disparition-d-une-legende-du-rugby.webp" alt="jonah lomu">
         <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful
@@ -37,5 +49,6 @@
         <p>&copy;2025 | Basky Keefe | New Zealand</p>
     </footer>
 </body>
+<!--last modified 21 May 2025: 1630 hrs-->
 
 </html>
