--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -3,20 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wireframe homepage</title>
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <div class="logo-box">
+            <img src="https://cdn.pixabay.com/photo/2023/10/19/15/58/logo-design-8327040_1280.png" alt="logo">
+        </div>
         <nav>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="index.html">Home Page</a>
+            <a href="#">Food</a>
+            <a href="#">Water</a>
+            <a href="#">Fire</a>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <div id="banner-box">
+            <section class="banner">
+                <img src="https://pic.nximg.cn/file/20230718/28685908_173129810102_2.jpg" alt="heron">
+                <h2>banner 1 Title</h2>
+                <p>banner 1 text</p>
+            </section>
+             <section class="banner">
+                <img src="https://pic.nximg.cn/file/20230718/28685908_173543587106_2.jpg" alt="racoon">
+                <h2>banner 2 Title</h2>
+                <p>banner 2 text</p>
+            </section>
+             <section class="banner">
+                <img src="https://pic.nximg.cn/file/20230718/28685908_180334724107_2.jpg" alt="octoby">
+                <h2>banner 3 Title</h2>
+                <p>banner 3 text</p>
+            </section>
+        </div>
+        <div id="product-gallery">
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 1 Title</h2>
+                <p>product 1 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 2 Title</h2>
+                <p>product 2 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 3 Title</h2>
+                <p>product 3 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 4 Title</h2>
+                <p>product 4 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 5 Title</h2>
+                <p>product 5 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 6 Title</h2>
+                <p>product 6 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 7 Title</h2>
+                <p>product 7 text</p>
+            </section>
+            <section class="product">
+                <img src="https://www.printwand.com/blog/media/2012/01/ultimate-guide-to-your-product-launch.jpg" alt="product">
+                <h2>product 8 Title</h2>
+                <p>product 8 text</p>
+            </section>
+                            
+        </div>
+    </main>
+    <footer>
+        <div id="details-box">
+            <section class="details">
+                <h2>details 1 Title</h2>
+                <p>details 1 text</p>
+            </section>
+            <section class="details">
+                <h2>details 2 Title</h2>
+                <p>details 2 text</p>
+            </section>
+            <section class="details">
+                <h2>details 3 Title</h2>
+                <p>details 3 text</p>
+            </section> 
+            <section class="details">
+                <img src="https://static.wikia.nocookie.net/logo_editing/images/a/ae/Enhanced_with_ImageSynth.png/revision/latest/scale-to-width-down/1200?cb=20250522110330" alt="details-image 1">
+                <img src="https://static.wikia.nocookie.net/logo_editing/images/a/ae/Enhanced_with_ImageSynth.png/revision/latest/scale-to-width-down/1200?cb=20250522110330" alt="details-image 1">
+                <img src="https://static.wikia.nocookie.net/logo_editing/images/a/ae/Enhanced_with_ImageSynth.png/revision/latest/scale-to-width-down/1200?cb=20250522110330" alt="details-image 1">
+                <p>details 4 text</p>
+            </section> 
+        </div>
+    </footer>
        
 </body>
 </html>
