--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Home page of rafting site">
     <meta name="author" content="Basky Keefe">
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles/rafting.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,9 +38,9 @@
     <main>
         <div class="hero">
             <img src="images/rafting12_1024.webp" alt="hero picture">
-            <h1>Democrate Corrupt Rafting Company</h1>
+            <h1>The Korrupt Rafting Company</h1>
             <article>
-                <img src="images/w03-employee-image.webp" alt="employees">
+                <img src="images/w03-employee-image.webp" alt="happy employee's">
                 <p>Our mission is to bring as much experience to your time rafting with us. We want you to have the best
                     time of your life, and we know our employees will give you more than what is expected. Our motto is
                     "if your money isn't spent; we'll spend it for you".</p>
@@ -66,11 +66,17 @@
         </section>
     </main>
     <footer>
-        <p>copy 2025 | Basky Keefe</p>
+        <p>&copy | 2025 | The Korrupt Rafting Company | Basky Keefe</p>
         <nav class="socialmedia">
-            <a href="https://myspace.com/signin"><img src="images/myspace-icon.png" alt="myspace-icon"></a>
-            <a href="https://www.wechat.com/"><img src="images/we-chat-icon.png" alt="wechat-icon"></a>
-            <a href="https://www.kuaishou.com/new-reco"><img src="images/kuaishou-icon.png" alt="kuaishou-icon"></a>
+            <a href="https://myspace.com/signin">
+                <img src="images/myspace-icon.png" alt="myspace-icon">
+            </a>
+            <a href="https://www.wechat.com/">
+                <img src="images/we-chat-icon.png" alt="wechat-icon">
+            </a>
+            <a href="https://www.kuaishou.com/new-reco">
+                <img src="images/kuaishou-icon.png" alt="kuaishou-icon">
+            </a>
         </nav>
     </footer>
 
