--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div class="logo-box">
-            <img src="images\z-therapidssplash.jpg" alt="logo">
+            <img src="images/z-therapidssplash.jpg" alt="logo">
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -40,6 +40,7 @@
             <img src="images/rafting12_1024.webp" alt="hero picture">
             <h1>The Korrupt Rafting Company</h1>
             <article>
+                <h3>Top CEO's Words -</h3>
                 <img src="images/w03-employee-image.webp" alt="happy employee's">
                 <p>Our mission is to bring as much experience to your time rafting with us. We want you to have the best
                     time of your life, and we know our employees will give you more than what is expected. Our motto is
@@ -66,7 +67,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy | 2025 | The Korrupt Rafting Company | Basky Keefe</p>
+        <p>&copy; | 2025 | The Korrupt Rafting Company | Basky Keefe</p>
         <nav class="socialmedia">
             <a href="https://myspace.com/signin">
                 <img src="images/myspace-icon.png" alt="myspace-icon">
