--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,15 +12,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Knewave&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Waiting+for+the+Sunrise&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Waiting+for+the+Sunrise&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -76,7 +72,7 @@
                 <img src="images/we-chat-icon.png" alt="wechat-icon">
             </a>
             <a href="https://www.kuaishou.com/new-reco">
-                <img src="images/kuaishou-icon.png" alt="kuaishou-icon">
+                <img src="images/kuaishou-icon.webp" alt="kuaishou-icon">
             </a>
         </nav>
     </footer>
