--- a/wwr/about.html
+++ b/wwr/about.html
@@ -46,11 +46,12 @@
             <p>Long time ago in a far away country a man by the name of George Washington sold their house and bought a
                 McDonlds's franchise. However, everyone was buying BK's instead, so he sold it for $500 and bought a
                 raft. He and his friend Joe Biden
-                collobrarted together and eventually created thriving rafting business. Eventually Biden wanted it all
+                collobrarted together and eventually created a thriving rafting business. Eventually Biden wanted it all
                 for himsef, and so he booted George Washington out, and George & his family went to some obscure place
                 called USA. Joe realized that being corrupt can make him a rich man beyond his dreams. And within a few
                 years thru forceful, lying, & deceptive means, became a very wealthy man. And in time his company became
-                the first trillion dollar company; suppassing Elon Musk. He eventually changed his name to Crooked Joe
+                the first trillion dollar company; suppassing Elon Musk as the richest man in the world. He eventually
+                changed his name to Crooked Joe
                 Biden, and won father of the year three time and became the most successful businessman of the century.
             </p>
         </section>
