--- a/index.html
+++ b/index.html
@@ -19,32 +19,38 @@
             <a href="https://www.facebook.com/basky.keefe">Facebook Page</a>
         </nav>
     </header>
-    <main>
-        <h1>Basky Keefe | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Basky Keefe" width="200">
-        <p>My name is Basky, and I'm from New Zealand. I'm studying the BYU software course and I really love it. I have
-            tried in the past to learn programming but found it quite difficult to understand where and how to start.
-            I'm enjoying the course and find it very interesting how these technologies that we use so often work in the
-            background. One interesting thing is that I've found programming quite easy to comprehend. And this is only
-            due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have
-            very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
+    <div class="grid">
+        <main>
+            <h1>Basky Keefe | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello, my name is Basky Keefe" width="200">
+            <p>My name is Basky, and I'm from New Zealand. I'm studying the BYU software course and I really love it. I
+                have
+                tried in the past to learn programming but found it quite difficult to understand where and how to
+                start.
+                I'm enjoying the course and find it very interesting how these technologies that we use so often work in
+                the
+                background. One interesting thing is that I've found programming quite easy to comprehend. And this is
+                only
+                due to the simularities I find with mathematics. I enjoy maths and found that programming and maths have
+                very much the same connection - as they are both logical in nature. Anyway that's about me.</p>
 
-        <ul class="box indent">
-            <li><a href="https://churchofjesuschristtemples.org/auckland-new-zealand-temple/">New Zealand, Auckland
-                    Temple</a></li>
-            <li><a href="https://churchofjesuschristtemples.org/hamilton-new-zealand-temple/">New Zealand, Hamilton
-                    Temple</a></li>
-            <li><a href="https://churchofjesuschristtemples.org/wellington-new-zealand-temple/">New Zealand, Wellington
-                    Temple</a></li>
-        </ul>
-    </main>
-
-    <aside class="box">
-        <h2>New Zealand</h2>
-        <img src="images/Jonah-Lomu-la-disparition-d-une-legende-du-rugby.webp" alt="jonah lomu">
-        <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful
-            lakes, rivers, beaches, mountains dot the country; a very picturesque place.</p>
-    </aside>
+            <ul class="box indent">
+                <li><a href="https://churchofjesuschristtemples.org/auckland-new-zealand-temple/">New Zealand, Auckland
+                        Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/hamilton-new-zealand-temple/">New Zealand, Hamilton
+                        Temple</a></li>
+                <li><a href="https://churchofjesuschristtemples.org/wellington-new-zealand-temple/">New Zealand,
+                        Wellington
+                        Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>New Zealand</h2>
+            <img src="images/Jonah-Lomu-la-disparition-d-une-legende-du-rugby.webp" alt="jonah lomu">
+            <p>New Zealand is a beautiful place. It is sometimes called the land of the long white cloud. Many beautiful
+                lakes, rivers, beaches, mountains dot the country; a very picturesque place.</p>
+        </aside>
+    </div>
     <footer>
         <p>&copy;2025 | Basky Keefe | New Zealand</p>
     </footer>
