--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
     <main>
         <div class="hero">
             <img src="images/rafting12_1024.webp" alt="hero picture">
-            <h1>The Korrupt Rafting Company</h1>
+            <h1>White Water Rafting</h1>
             <article>
                 <h3>Top CEO's Words -</h3>
                 <img src="images/w03-employee-image.webp" alt="happy employee's">
@@ -41,31 +41,52 @@
                     "if your money isn't spent; we'll spend it for you".</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>Long time ago in a far away country a man by the name of George Washington sold their house and bought a
+
+        <section class="history">
+                <p>Long time ago in a far away country a man by the name of George Washington sold their house and bought a
                 McDonlds's franchise. However, everyone was buying BK's instead, so he sold it for $500 and bought a
                 raft. He and his friend Joe Biden
                 collobrarted together and eventually created a thriving rafting business. Eventually Biden wanted it all
                 for himsef, and so he booted George Washington out, and George & his family went to some obscure place
-                called USA. Joe realized that being corrupt can make him a rich man beyond his dreams. And within a few
+                called USA.</p>
+                <h2>History</h2>
+                <p>Joe realized that being corrupt can make him a rich man beyond his dreams. And within a few
                 years thru forceful, lying, & deceptive means, became a very wealthy man. And in time his company became
                 the first trillion dollar company; suppassing Elon Musk as the richest man in the world. He eventually
                 changed his name to Crooked Joe
-                Biden, and won father of the year three time and became the most successful businessman of the century.
-            </p>
+                Biden, and won father of the year three time and became the most successful businessman of the century.</p>
         </section>
-        <section>
+
+        <section class="await">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting-1.webp" alt="rafting-image-1">
-            <img src="images/rafting-2.webp" alt="rafting-image-2">
-            <img src="images/rafting-3.webp" alt="rafting-image-3">
-            <img src="images/rafting-4.webp" alt="rafting-image-4">
-            <img src="images/rafting-5.webp" alt="rafting-image-5">
+            <figure>
+                <img src="images/rafting-1.webp" alt="rafting-image-1">
+                <figcaption>Kwagunt</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting-2.webp" alt="rafting-image-2">
+                <figcaption>Tuna Creek</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting-3.webp" alt="rafting-image-3">
+                <figcaption>Deubendorff</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting-4.webp" alt="rafting-image-4">
+                <figcaption>Willie’s Necktie</figcaption>   
+            </figure>
+
+            <figure>
+                <img src="images/rafting-5.webp" alt="rafting-image-5">
+                <figcaption>Aratiatia</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
-        <p>&copy; | 2025 | The Korrupt Rafting Company | Basky Keefe</p>
+        <p>&copy; | 2025 | White Water Rafting | Basky Keefe</p>
         <nav class="socialmedia">
             <a href="https://myspace.com/signin">
                 <img src="images/myspace-icon.png" alt="myspace-icon">
