--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting</title>
+    <title>White Water Rafting About Us</title>
     <meta name="description" content="Home page of rafting site">
     <meta name="author" content="Basky Keefe">
 
