--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/poll-form.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@700&family=Savate&display=swap"
+        rel="stylesheet">
     <title>WDD 130 | HTML Form - User Poll</title>
 </head>
+
 <body>
-    <header><h1>WDD 130 | HTML Form - User Poll</h1>
+    <header>
+        <h1>WDD 130 | HTML Form - User Poll</h1>
     </header>
     <main>
-        <form action="">
-            <fieldset></fieldset>
-            <fieldset></fieldset>
+        <form>
+            <fieldset>
+                <legend>Contact Information</legend>
+                <div class="form-item column2">
+                    <label for="fullname">full name:</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="useremail">Email:</label>
+                    <input type="email" id="useremail" name="useremail">
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Questions</legend>
+                <div class="form-item column1">
+                    <label for="browser">What is your favorite browswer?</label>
+                    <select name="browser" id="browser">
+                        <option value="">--choose a browswer--</option>
+                        <option value="edge">Edge</option>
+                        <option value="firefox">Firefox</option>
+                        <option value="safari">Safari</option>
+                        <option value="Chrome">Chrome</option>
+                    </select>
+                </div>
+
+                <div class="form-item column1">
+                    <label for="pet">Do you have a household pet?</label>
+                    <input type="checkbox" name="pet" id="pet">
+                </div>
+
+                <label for="feedback">List the places you have lived.</label>
+                <textarea name="feedback" id="feedback" rows="5" placeholder="e.g Pipiwai, Otangarei.."></textarea>
+
+            </fieldset>
+            <button type="submit">Submit Poll</button>
         </form>
     </main>
     <footer>
-        <p>copy2025 | HTML Form - User Poll Activity |Basky Keefe</p>
-    </footer> 
+        <p>&copy;2025 | HTML Form - User Poll Activity |Basky Keefe</p>
+    </footer>
 </body>
+
 </html>
