--- a/quiz.html
+++ b/quiz.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/quiz.css">
     <title>Quiz</title>
 </head>
+
 <body>
     <header>
-        <h1>Quiz</h1>
+        <h1>Basic HTML and CSS Quiz</h1>
     </header>
     <main>
         <form>
-
+            <div>
+                <label for="q1">1. What does the acronym CSS stand for?</label>
+                <input type="text" name="q1" id="q1">
+            </div>
+            <div>
+                <label for="q2">2. How are id and class atributes selected in CSS?</label>
+                <textarea name="q2" id="q2" rows="5" placeholder=""></textarea>
+            </div>
+            <div>
+                <label for="q3">3. Which of the following is a valid CSS comment?</label>
+                <select name="q3" id="q3"></select>
+            </div>
+            <div>
+                <label for="q4">4. What is the bottom marging given this declartion?</label>
+                <input type="number" name="q4" id="q4">
+                <input type="text">
+                <button type="button">Submit Quiz</button>
+            </div>
         </form>
     </main>
     <footer>
         <p>&copy; Basky Keefe</p>
     </footer>
-    
+
 </body>
+
 </html>
