--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting About Us</title>
-    <meta name="description" content="Home page of rafting site">
+    <meta name="description" content="Overview our rafting company">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
@@ -30,6 +30,8 @@
         </nav>
     </header>
     <main>
+        <h1 class="contact">About Us</h1>
+
         <div class="hero">
             <img src="images/rafting12_1024.webp" alt="hero picture">
             <h1>White Water Rafting</h1>
@@ -43,18 +45,19 @@
         </div>
 
         <section class="history">
-                <p>Long time ago in a far away country a man by the name of George Washington sold their house and bought a
+            <p>Long time ago in a far away country a man by the name of George Washington sold their house and bought a
                 McDonlds's franchise. However, everyone was buying BK's instead, so he sold it for $500 and bought a
                 raft. He and his friend Joe Biden
                 collobrarted together and eventually created a thriving rafting business. Eventually Biden wanted it all
                 for himsef, and so he booted George Washington out, and George & his family went to some obscure place
                 called USA.</p>
-                <h2>History</h2>
-                <p>Joe realized that being corrupt can make him a rich man beyond his dreams. And within a few
+            <h2>History</h2>
+            <p>Joe realized that being corrupt can make him a rich man beyond his dreams. And within a few
                 years thru forceful, lying, & deceptive means, became a very wealthy man. And in time his company became
                 the first trillion dollar company; suppassing Elon Musk as the richest man in the world. He eventually
                 changed his name to Crooked Joe
-                Biden, and won father of the year three time and became the most successful businessman of the century.</p>
+                Biden, and won father of the year three time and became the most successful businessman of the century.
+            </p>
         </section>
 
         <section class="await">
@@ -76,7 +79,7 @@
 
             <figure>
                 <img src="images/rafting-4.webp" alt="rafting-image-4">
-                <figcaption>Willie’s Necktie</figcaption>   
+                <figcaption>Willie’s Necktie</figcaption>
             </figure>
 
             <figure>
