--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Rafting Contact Us</title>
-    <meta name="description" content="contact information and form">
+    <meta name="description" content="contact information">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
