--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting Home</title>
+    <title>White Water Rafting Home Page</title>
     <meta name="description" content="Home page of rafting site">
     <meta name="author" content="Basky Keefe">
 
@@ -59,6 +59,19 @@
                     <button type="button">Sign me up NOW!</button>
                 </p>
             </form>
+        </section>
+
+        <section>
+            <h2>Click <strong><a href="trips.html">here</a></strong> to know more about our trips options </h2>
+        </section>
+
+        <section>
+            <h2>Purpose</h2>
+            <p>fffff</p>
+            <h2>Offerings</h2>
+            <p>sdfsdf</p>
+            <img src="images/home1.webp" alt="purpose image">
+            <img src="images/home2.webp" alt="Offering image">
         </section>
 
 
