--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -32,7 +32,13 @@
     <main>
         <h1 class="contact">Trips</h1>
 
-       
+        <section>
+            <h2>Like What you see.</h2>
+            <p>Click <em><a href="contact.html">here</a></em> to make an inquiry before bookings closed. If you book now
+                before June 2025 we will give you a 25% discount on all package & a free teddy bear.</p>
+        </section>
+
+
     </main>
     <footer>
         <p>&copy; | 2025 | White Water Rafting | Basky Keefe</p>
