--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting Contact Us</title>
-    <meta name="description" content="contact information">
+    <title>Contact the White Water Rafting Team</title>
+    <meta name="description" content="We offer the best rafting experience for all types of people. So contact us now, or speak with one of our assitants and they will guide you and answer any questions you may have.">
     <meta name="author" content="Basky Keefe">
 
     <link rel="stylesheet" href="styles/rafting.css">
