--- a/wwr/index.html
+++ b/wwr/index.html
@@ -67,7 +67,7 @@
 
         <section>
             <h2>Purpose</h2>
-            <p>fffff</p>
+            <p>The White Water Rafting Comompany is  </p>
             <h2>Offerings</h2>
             <p>sdfsdf</p>
             <img src="images/home1.webp" alt="purpose image">
